
[tool.poetry]
name = "fern-nursery"
version = "0.0.69-7-g3c7deda"
description = ""
authors = []
packages = [
    { include = "fern", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "0.23.3"
backports-cached_property = "1.0.2"
pydantic = "^1.9.2"
types-backports = "0.1.3"

[tool.poetry.dev-dependencies]
mypy = "0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
